--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
 		</p>
 	</div>
 </footer>
+<script src="node_modules/jquery/dist/jquery.min.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
