--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="description" content="Responsive Website"/>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"/>	
 	<link rel="stylesheet" href="styles/global.css"/>
 	<link rel="stylesheet" href="styles/header.css"/>
 	<link rel="stylesheet" href="styles/about.css"/>
@@ -194,6 +195,7 @@
 		</p>
 	</div>
 </footer>
+<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="node_modules/jquery/dist/jquery.min.js"></script>
 <script src="script.js"></script>
 </body>
